# advent-of-code

./: .gitignore  README.md  create_workspace.py  organaize.py  requirements.txt  secrets.toml
2020/6/: 6-aryan.py  6.py
2020/7/: 7.py
2021/1/: 1.py
2021/14/: 14.ipynb
2021/16/: 16.ipynb
2021/17/: 17.py
2021/18/: 18.ipynb  18.py
2021/19/: solution.py
2021/3/: 3.ipynb  3.py
2021/5/: 5.ipynb
2021/8/: 8.ipynb
2022/1/: 1.py
2022/10/: solution.py
2022/16/: solution.py
2022/17/: solution.py
2022/2/: 2.py
2022/4/: 4.py
2022/5/: 5.py  solution.py
2022/6/: solution.py
2022/7/: solution.py
2022/8/: solution.py
2022/9/: solution.py
2023/aoc-2023-rust/: Cargo.toml
2023/aoc-2023-rust/src/: day_1.rs  day_2.rs  lib.rs  main.rs  solutions.rs
2023/aoc-2023-rust/src/solutions/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs
aoc-2023-rust/: Cargo.toml
aoc-2023-rust/src/: lib.rs  main.rs
aoc-2023-rust/src/solutions/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_3.rs  day_5.rs  day_7.rs  day_8.rs
python/2020/7/: 7.py
python/2021/1/: 1.py
python/2021/10/: 10.ipynb
python/2021/11/: 11.ipynb
python/2021/12/: 12.ipynb
python/2021/13/: 13.ipynb
python/2021/15/: 15.ipynb
python/2021/17/: 17.ipynb
python/2021/18/: 18.py
python/2021/2/: 2.py
python/2021/4/: 4.ipynb
python/2021/6/: 6.ipynb
python/2021/7/: 7.ipynb
python/2021/9/: 9.ipynb
python/2022/14/: solution.py
python/2022/3/: 3.py
python/2022/5/: solution.py
python/2022/6/: solution.py
python/2022/8/: solution.py
