[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
config = "0.13.4"
dotenv = "0.15.0"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
regex = "1.10.2"
reqwest = "0.11.23"
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["rt", "macros", "fs"] }
toml = "0.8.8"
