[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
regex = "1.10.2"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.50"
